--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   get: 4.6.6
+  get_storage: ^2.1.1
   google_fonts: ^6.1.0
 
 dev_dependencies:
