--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.9+1
   flutter_svg: ^2.0.9
   get: 4.6.6
   get_storage: ^2.1.1
   google_fonts: ^6.1.0
+  intl: ^0.19.0
+  simple_markdown_editor: ^0.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
