--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
+  flutter_linkify: ^6.0.0
   flutter_markdown: ^0.6.9+1
   flutter_svg: ^2.0.9
   get: 4.6.6
