--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.19.0
   simple_markdown_editor: ^0.2.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
